--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                 
             </form>
             <div class="footer">
-                <p>Created with &#10084; By Anirban Dash</p>
+                <p>Created By Kartikay Upadhyay</p>
             </div>
         </div>
     </section>
     
-    <script src="./Javascript/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
